# gg.libs

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/app/: CMakeLists.txt
src/app/include/gg/app/application/: application.h  application_base.h  application_linux.h  application_platform.h  application_windows.h  window_application.h
src/app/include/gg/app/data/: data.h  data_base.h  data_linux.h  data_platform.h  data_windows.h
src/app/include/gg/app/debug/console/: console.h  console_linux.h  console_platform.h  console_windows.h
src/app/include/gg/app/runtime/: runtime.h  runtime_base.h  runtime_linux.h  runtime_platform.h  runtime_windows.h  window_runtime.h
src/app/include/gg/app/window/: iwindow_observer.h  window.h  window_base.h  window_info.h  window_info_base.h  window_info_linux.h  window_info_platform.h  window_info_windows.h  window_linux.h  window_platform.h  window_windows.h
src/app/src/gg/app/: main_linux.cpp  main_windows.cpp
src/app/src/gg/app/application/: application.cpp  application_base.cpp  application_linux.cpp  application_windows.cpp  window_application.cpp
src/app/src/gg/app/debug/console/: console.cpp  console_linux.cpp  console_windows.cpp
src/app/src/gg/app/runtime/: runtime.cpp  runtime_base.cpp  runtime_linux.cpp  runtime_windows.cpp  window_runtime.cpp
src/app/src/gg/app/window/: window.cpp  window_base.cpp  window_linux.cpp  window_windows.cpp
src/app/test/gg/app/data/: data_test.cpp
src/app/test/gg/app/window/: window_info_test.cpp  window_test.cpp
src/config/: CMakeLists.txt
src/config/include/gg/config/: config.h  configuration.h
src/config/src/gg/config/: config.cpp  configuration.cpp
src/config/test/gg/config/: config_test.cpp  configuration_test.cpp
src/core/: CMakeLists.txt
src/core/include/gg/core/constant/: constant.h
src/core/include/gg/core/container/: container.h
src/core/include/gg/core/container/array/: array_dynamic.h  array_static.h
src/core/include/gg/core/container/iterator/: back_insert_iterator.h  contiguous_iterator.h  iterator_defs.h  iterator_type.h
src/core/include/gg/core/container/map/: hash_map.h  map.h
src/core/include/gg/core/debug/: assert.h  assert_platform.h
src/core/include/gg/core/endian/: endian.h  endian_defs.h
src/core/include/gg/core/hash/: hash.h
src/core/include/gg/core/macro/: macro.h
src/core/include/gg/core/memory/: memory.h  memory_buffer_dynamic.h  memory_buffer_ref.h  memory_buffer_static.h  memory_defs.h
src/core/include/gg/core/pattern/: handle.h  identifiable.h  nameable.h  non_copyable.h  non_movable.h  sizeable.h  typeable.h
src/core/include/gg/core/pattern/module_locator/: module_locator.h
src/core/include/gg/core/pattern/observer/: observable.h
src/core/include/gg/core/pattern/singleton/: singleton_automatic.h  (+2 more)
src/core/include/gg/core/stream/: file_istream.h  istream.h  memory_istream.h  stream_defs.h
src/core/include/gg/core/thread/: atomic.h  thread.h  thread_pool.h
src/core/include/gg/core/type/: constant.h  convert.h  enum.h  limit.h  number.h  type.h  type_trait.h
src/core/include/gg/core/utils/: bit_field.h  byte_swap.h  converter.h  text_utils.h
src/core/src/gg/core/stream/: file_istream.cpp  memory_istream.cpp
src/core/src/gg/core/thread/: thread_pool.cpp
src/core/test/gg/core/: version_test.cpp
src/core/test/gg/core/constant/: constant_test.cpp
src/core/test/gg/core/endian/: endian_test.cpp
src/core/test/gg/core/hash/: hash_test.cpp
src/core/test/gg/core/memory/: memory_buffer_dynamic_test.cpp  memory_buffer_ref_test.cpp  memory_buffer_static_test.cpp  memory_test.cpp
src/core/test/gg/core/pattern/: identifiable_test.cpp  nameable_test.cpp  non_copyable_test.cpp  non_movable_test.cpp  sizeable_test.cpp  typeable_test.cpp
src/core/test/gg/core/stream/: file_istream_test.cpp  memory_istream_test.cpp  stream_test.cpp
src/core/test/gg/core/thread/: thread_test.cpp
src/core/test/gg/core/type/: constant_test.cpp  enum_test.cpp  number_test.cpp  type_test.cpp
src/core/test/gg/core/utils/: bit_field_test.cpp  byte_swap_test.cpp
src/crypt/: CMakeLists.txt
src/crypt/include/gg/crypt/hash/: hash.h
src/crypt/src/gg/crypt/hash/: hash.cpp
src/crypt/test/gg/crypt/hash/: hash_test.cpp
src/engine/: CMakeLists.txt
src/engine/include/gg/engine/: engine.h  engine_base.h  engine_platform.h
src/engine/include/gg/engine/pc/: engine_pc.h
src/engine/include/gg/engine/runtime/: runtime.h  runtime_base.h  runtime_platform.h
src/engine/src/gg/engine/: engine.cpp  engine_base.cpp
src/engine/src/gg/engine/pc/: engine_pc.cpp
src/engine/src/gg/engine/runtime/: runtime.cpp  runtime_base.cpp
src/engine/test/gg/engine/: engine_test.cpp
src/engine/test/gg/engine/runtime/: runtime_test.cpp
src/gfx/: CMakeLists.txt
src/gfx/include/gg/gfx/: context.h  context_info.h  context_info_base.h  gfx_log.h  icontext.h
src/gfx/include/gg/gfx/opengl/: opengl_context.h  opengl_context_base.h  opengl_context_info.h  opengl_context_linux.h  opengl_context_platform.h  opengl_context_windows.h
src/gfx/include/gg/gfx/shader/: shader_defs.h
src/gfx/include/gg/gfx/vulkan/: vulkan_context.h  vulkan_context_info.h
src/gfx/src/gg/gfx/: context.cpp  gfx_log.cpp
src/gfx/src/gg/gfx/opengl/: opengl_context.cpp  opengl_context_linux.cpp  opengl_context_windows.cpp  opengl_includes.h
src/gfx/src/gg/gfx/vulkan/: vulkan_context.cpp
src/gfx/test/gg/gfx/vulkan/: vulkan_context_test.cpp
src/gui/: CMakeLists.txt
src/gui/include/gg/gui/: context_base.h
src/gui/src/gg/gui/: context_base.cpp
src/gui/test/gg/gui/: context_test.cpp
src/log/: CMakeLists.txt
src/log/include/gg/log/: handler.h  ilog_handler.h  log_manager.h  logger.h  logger_defs.h
src/log/include/gg/log/channel/: channel.h  channel_defs.h  channel_helper.h
src/log/src/gg/log/: log_manager.cpp
src/log/test/gg/log/: log_manager_test.cpp  logger_test.cpp
src/log/test/gg/log/channel/: channel_test.cpp
src/test/: CMakeLists.txt
src/test/include/gg/test/: catch.h
src/test/src/gg/test/: main.cpp
(+105 files in other folders)
